Fixed COVID page on mobile devices

--- a/cirillos/static/styles/covid.css
+++ b/cirillos/static/styles/covid.css
@@ -56,9 +56,3 @@ main {
 		margin: 0;
 	}
 }
-
-@media only screen and (max-width: 500px) {
-	.header h1 {
-		font-size: 250%;
-	}
-}
